src/test/deca/context/valid/sansObjet/IfWithBool.deca
{
    boolean b;
    b= false;
    if (b!=true){
        print("Test Ok");
    }
}