src/test/deca/context/invalid/object/badCondition.deca
class X
{
  int a;
  boolean b = true;
}
class A
{
  void a(int a) asm ("a");
}

class B extends A
{
  X x = new X();
}

{
  B v = new B();
  X d = v.x;
  if (d)
  {
    println("hello");

  }
}
